--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "@cloudinary/url-gen": "^1.21.0",
     "@tailwindcss/vite": "^4.1.11",
     "axios": "^1.11.0",
+    "browser-image-compression": "^2.0.2",
     "dayjs": "^1.11.13",
     "file-saver": "^2.0.5",
     "react": "^19.1.1",
